Ajout nouvelle demande dans création réunion: non fonctionnel pour le moment

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -28,7 +28,7 @@
 				<%= f.time_select :start_hour, {:ampm => true, :include_blank => true, :minute_step => 15} %>
 			</p>			
 			<p id="issue">
-				<%= f.text_field :issue_id, :size => 10 %>
+				<%= f.text_field :issue_id, :size => 10 %><a href="#" class="icon icon-add"></a>
 			</p>
 			<%= javascript_tag "observeAutocompleteField('meeting_issue_id', '#{escape_javascript auto_complete_issues_path}')" %>
 		</div>
